--- a/index.html
+++ b/index.html
@@ -100,14 +100,12 @@
                 <div class="about-desc">
                   <h1>About</h1>
                   <p>
-                    Hi &#128075; <br />I'm Vaibhav Kumar Verma. I am 3rd year
-                    undergrad in Electrical Engineering from
+                    Hi &#128075; <br />I'm Vaibhav Kumar Verma. I am B.Tech
+                    graduate in Electrical Engineering from
                     <b>NIT Jalandhar</b>.
                   </p>
                   <p>
-                    I am Pre-final year student with good knowledge of Data
-                    Structures and Algorithms in C++ with 2+ years of experience
-                    and good hands on Web Development.
+                    I am Ingenious Software Developer with good knowledge of Data Structures and Algorithms in C++ and hands on experience with Web Development in NodeJs,ReactJS,Redux,JavaScript. Delve to expedite my coding skills and gain exposure to new tools by getting experience in the IT industry as a Software Engineer.
                   </p>
                   <p class="finalText">
                     I love to listen to music and binge shows.
